Fix navigation in the header via using 'z-index'

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,6 +94,7 @@ section p{
 
 header {
   position: absolute;
+  z-index: 2;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -142,6 +143,7 @@ header nav li {
 
 .hero {
   position: relative;
+  z-index: 1;
   justify-content: center;
   text-align: center;
   min-height: 100vh;
